--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</div>
 	<div id="trees" class="data">
 		-2,2 -5,1 -7,2 -6,3 0,5 -1,8 -3,7 -4,7 -6,7 -6,9 -9,8 -12,7 -13,5 -11,5 -13,2 -14,0 -13,-2 -15,-3 -13,-6 -10,-7 -7,-5 -3,-9 -3,-11 0,-12 3,-13 5,-11 8,-10 9,-8 10,-6 12,-5 11,-3 12,-4 10,-1 11,2 9,2 2,3 4,5 6,4 8,5
-	</div>x
+	</div>
 	<div id="startdata" class="data">
 		-1,1/1,1 3,-8/3,-10
 	</div>
