--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link href="style.css" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
+		<title>Online Racing Game!</title>
 	</head>
 	<body>
 	<div id="trackcode" class="data">
