--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<link href="style.css?v=1.1" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
+		<script src="https://jchabin.github.io/VR-ThreeJS-Test/ThreeJS/DeviceOrientationControls.js"></script>
+		<script src="https://jchabin.github.io/VR-ThreeJS-Test/ThreeJS/StereoEffect.js"></script>
 		<title>Online Racing Game!</title>
 	</head>
 	<body>
