--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
 		</script>
 		<div class="menuitem title">Choose a color:<br/><div id="colorpicker" ontouchstart="event.touches[0].buttons = 1; this.onmousemove(event.touches[0])" ontouchmove="event.touches[0].buttons = 1; this.onmousemove(event.touches[0])" onmousedown="this.onmousemove(event)" onmousemove="if(event.buttons == 1){ var x = event.clientX - this.getBoundingClientRect().left; x = Math.min(this.clientWidth, Math.max(0, x)); color = Math.floor(x / this.clientWidth * 360); updateColor(); }"><div id="slider"></div></div></div>
 		<div class="menuitem title"><div id="start" onclick="menu2()" ontouchstart="this.click()">Start!</div></div>
-		<div id="cardboard" ontouchstart="this.onclick()" onclick="this.className = this.className == 'sel' ? '' : 'sel';"></div>
+		<div id="settings" ontouchstart="this.onclick()" onclick="this.parentNode.children[7].className = this.parentNode.children[7].className == 'sel' ? '' : 'sel';"></div>
+		<div id="toolbar">
+			<div class="tools" id="edit" ontouchstart="this.onclick()" onclick="window.open('editor')"></div>
+			<div class="tools" id="cardboard" ontouchstart="this.onclick()" onclick="this.className = this.className == 'tools disabled' ? this.className : this.className == 'tools sel' ? 'tools' : 'tools sel';"></div>
+			<div class="tools" id="help" ontouchstart="this.onclick()" onclick="window.open('help')">?</div>
+		</div>
 	</div>
 	<script src="script.js?v=1.1"></script>
 	</body>
