--- a/editor/index.html
+++ b/editor/index.html
@@ -31,7 +31,7 @@
 				<p><b>Export</b>- When you click <b>Export</b>, it opens a new tab with some numbers and symbols on it. You can just press <b>Ctrl-A</b> and <b>Ctrl-C</b> it to copy the whole thing. You use that for importing the map into the game.</p>
 				<p><b>Help</b>- Clicking here will open this menu.<p>
 				Once you've made a stellar map, you go to the <a href="https://jchabin.github.io/cars/">Online Racing Game</a> website and press <b>Ctrl-I</b> on the main menu. Paste your track code into the prompt, and you're good to go. If you host the game, all other players will also use your map. Good luck, y'all!
-				<p style="text-align: center"><b style="text-shadow: 0 0 1vmin #f29696">Click anywhere in this box to close it.</b></p>
+				<p style="text-align: center"><b style="color: red">Click anywhere in this box to close it.</b></p>
 			</div>
 		</div>
 		<div id="menu">
