--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-auth.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-analytics.js"></script>
 		<script src="https://jchabin.github.io/VR-ThreeJS-Test/ThreeJS/DeviceOrientationControls.js"></script>
 		<script src="https://jchabin.github.io/VR-ThreeJS-Test/ThreeJS/StereoEffect.js"></script>
