--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			<div class="tools" id="cardboard" onclick="this.className = this.className == 'tools disabled' ? this.className : this.className == 'tools sel' ? 'tools' : 'tools sel';"></div>
 			<div class="tools" id="help" onclick="window.open('help')">?</div>
 		</div>
+		<a id="mywebsitelink" href="https://johnnychabin.com" target="_blank"><img src="https://johnnychabin.com/images/carsprev.webp" style="max-height: 30vmin;"></a>
 	</div>
 	<script src="script.js"></script>
 	</body>
